--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header {
 	width: 100%;
-	height: 60px;
+	height: $header-height;
 	position: fixed;
 
 	display: flex;
@@ -8,7 +8,7 @@
 	padding-left: 50px;
 	padding-right: 50px;
 
-	border-bottom: 1px solid $header-border-color;
+	border-bottom: 2px solid $header-border-color;
 	background-color: $header-background-color;
 
 	@media (max-width: 460px) {
